[tool.poetry]
name = "searchlocation"
version = "0.1.0"
description = ""
authors = ["Piotr Hondra <piotr.hondra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^2.0.12"
GeoAlchemy2 = "^0.13.2"
psycopg2-binary = "^2.9.6"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
